# px4-jsbsim-bridge

./: CMakeLists.txt  README.md  package.xml
cmake/: FindMAVLink.cmake
configs/: d455_best.yaml  px4_config.yaml
include/: actuator_plugin.h  jsbsim_bridge_ros.h  mavlink_interface.h
launch/: px4_jsbsim_bridge.launch.py  px4_jsbsim_vslam.launch.py
models/ATI-Resolution/: Malolo1-set.xml  Resolution3-set.xml
models/Rascal/: Rascal110-Electric-YASim-set.xml  Rascal110-JSBSim-set.xml  Rascal110-YASim-set.xml
models/hexarotor_x/: hexarotor_x-set.xml
models/quadrotor_x/: quadrotor_x-set.xml  quadrotor_x.xml
rviz/: slam_view.rviz
src/: fgfs_cockpit_publisher.cpp  jsbsim_bridge_node.cpp  jsbsim_bridge_ros.cpp  mavlink_interface.cpp  sync_cam_msg.cpp
