<?xml version="1.0"?>
<package format="3">
  <name>jsbsim_bridge</name>
  <version>0.1.0</version>
  <description>JSBSim bridge for PX4 and ROS 2</description>
  <maintainer email="you@example.com">Your Name</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>mavlink</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
